<resources>
    <string name="app_name">EZ Cocktails</string>

    <string name="error_fetch_recipe">An error occurred, try again.</string>

    <string name="servings">The number of people that this dish can serve</string>

    <string name="ingredient_name">%1$s:</string>

    <string name="removed_from_fav">Removed from favorite</string>
    <string name="added_from_fav">Added to favorite</string>

    <string name="step_number">Step %1$s:</string>
    <string name="next_step">Next</string>
    <string name="previous_step">Previous</string>

    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>

    <string name="retry">retry</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_result">No result found</string>

    <string name="recipe_name_separator">%1$s - Introduction</string>

    <string name="unknown_error">An unknown error occurred, try again.</string>
    <string name="add_widget">Add widget</string>

    <string name="action_search">Search</string>

    <string name="cocktail_name">Name:</string>
    <string name="cocktail_ingredient">Ingredients:</string>

    <string name="filter_alcoholic">Alcoholic</string>
    <string name="filter_non_alcoholic">Non-Alcoholic</string>
    <string name="filter_cocktail">Cocktails</string>
    <string name="filter_ordinary_drink">Ordinary drinks</string>

    <string name="choose_recipe">Please select a recipe and click on the button</string>
    <string name="added_to_widget">Added to widget</string>

    <string name="app_id_admob">ca-app-pub-8725338676350366~8892888137</string>
    <string name="id_pub_banner">ca-app-pub-8725338676350366/9956765788</string>

    <string name="google_app_id">1:980201246019:android:82b3fed5cd9a9db9</string>

    <string name="add_to_widget">Add to widget</string>



    <!--CONTENT DESCRIPTION-->
    <string name="placeholder_cocktail">Placeholder recipe</string>
    <string name="recipe_picture">Recipe picture</string>
    <string name="add_to_widget_icon">Icon add to widget</string>
    <string name="icon_delete">Icon delete</string>
    <string name="ingredient_picture">Ingredient picture</string>
    <string name="icon_favorite">Icon favorite</string>
    <string name="unfold_icon">Unfold icon</string>
    <string name="fold_icon">Fold icon</string>
</resources>

