<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:folding-cell="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/small_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_light_background"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingTop="@dimen/card_corner">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black">

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_padding"
                        android:hint="@string/cocktail_name"
                        android:text=""
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                </android.support.design.widget.TextInputLayout>


                <com.ramotion.foldingcell.FoldingCell xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/folding_cell"
                    folding-cell:animationDuration="500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:id="@+id/cell_content_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/black">

                                <EditText
                                    android:id="@+id/editTextIngredient"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/small_padding"
                                    android:hint="@string/cocktail_ingredient"
                                    android:maxLines="1"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                android:id="@+id/recyclerViewIngredientFilter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:layout_marginEnd="@dimen/small_padding"
                                android:layout_marginStart="@dimen/small_padding" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <CheckBox
                                    android:id="@+id/checkBoxAlcoholic"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked="true"
                                    android:gravity="center"
                                    android:text="@string/filter_alcoholic"
                                    android:textColor="@color/black" />

                                <CheckBox
                                    android:id="@+id/checkBoxNonalcoholic"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:checked="true"
                                    android:gravity="center"
                                    android:text="@string/filter_non_alcoholic"
                                    android:textColor="@color/black" />
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <CheckBox
                                    android:id="@+id/checkBoxCocktail"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked="true"
                                    android:gravity="center"
                                    android:text="@string/filter_cocktail"
                                    android:textColor="@color/black" />

                                <CheckBox
                                    android:id="@+id/checkBoxOrdinaryDrink"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:checked="true"
                                    android:gravity="center"
                                    android:text="@string/filter_ordinary_drink"
                                    android:textColor="@color/black" />
                            </LinearLayout>

                            <ImageView
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                android:layout_gravity="center"
                                android:contentDescription="@string/fold_icon"
                                android:src="@drawable/ic_fold" />
                        </LinearLayout>
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/cell_title_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                android:contentDescription="@string/unfold_icon"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_unfold" />
                        </LinearLayout>
                    </FrameLayout>
                </com.ramotion.foldingcell.FoldingCell>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/placeholder_cocktail"
                android:alpha="0.1"
                android:src="@drawable/placeholder_cocktail" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewRecipes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:scrollbars="vertical" />

        </FrameLayout>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:contentDescription="@string/action_search"
        android:src="@drawable/ic_search"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/fab_press_translation_z" />
</android.support.design.widget.CoordinatorLayout>
