<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipeGlobalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_small__vertical_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/placeholder_cocktail"
        android:alpha="0.1"
        android:src="@drawable/placeholder_cocktail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardViewIngredientsRecipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/medium_card_elevation">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/extra_small_padding">

                <TextView
                    android:id="@+id/textViewIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/gradient_bg_list"
                    android:gravity="center"
                    android:paddingBottom="@dimen/extra_extra_small_padding"
                    android:paddingEnd="@dimen/small_padding"
                    android:paddingStart="@dimen/small_padding"
                    android:paddingTop="@dimen/extra_extra_small_padding"
                    android:text="@string/ingredients"
                    android:textStyle="italic" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewIngredientsRecipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewIngredients"
                    android:layout_marginTop="@dimen/extra_extra_small_padding"
                    android:paddingStart="@dimen/extra_small_padding"
                    android:paddingEnd="@dimen/extra_small_padding"
                    android:scrollbars="vertical" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardViewInstructionsRecipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large_padding"
            android:layout_marginBottom="@dimen/fragment_small__vertical_margin"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/medium_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_bg_list"
                    android:gravity="center"
                    android:text="@string/instructions"
                    android:textStyle="italic" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewStepRecipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_extra_small_padding"
                    android:scrollbars="vertical" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
